--- a/style/style.css
+++ b/style/style.css
@@ -7,9 +7,39 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background-image: url(../assets/bg2.png); 
+    /* background-color: #F7F3F5; */
     background-size: cover;
+}
+
+.bglavender{
+    background-color: #75485E;
 }
 .button{
     padding-top: 20px;
+}
+.btn-primary, .btn-primary:active, .btn-primary:visited {
+    background-color: #75485E !important;
+    border:#75485E !important;
+}
+.btn-primary:hover{
+    background-color: #b87e9a  !important;
+   
+}
+.animated-btn{
+    background-color: #D0B3C2 !important;
+    border: #D0B3C2;
+    transition: all 0.4s ease-in;
+}
+.animated-btn:hover{
+    background-color: #b87e9a !important;
+    color: #fff !important;
+}
+.feedback-container {
+    background-color: #EFE6EA;
+    width: 60% !important;
+    border-radius: 5%;
+}
+.row{
+    padding: 15px;
+
 }
